--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,2 +1,2 @@
-// @include font("Oswald", "Oswald-Medium", "400", "normal");
-// @include font("Oswald", "Oswald-Regular", "400", "normal");
+@include font("Inter", "Inter-Regular", "400", "normal");
+@include font("Inter", "Inter-Medium", "500", "normal");
