--- a/src/pages/login/login.module.scss
+++ b/src/pages/login/login.module.scss
@@ -1,41 +1,41 @@
-@import "styles/_variables.scss";
+@import 'styles/_variables.scss';
 
 .main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 .wrapper {
-    padding: 24px 48px 32px;
-    width: 360px;
+  padding: 24px 48px 32px;
+  width: 360px;
 
-    background: #FFFFFF;
-    border: 1px solid #E2E9F3;
-    border-radius: 6px;
+  background: #ffffff;
+  border: 1px solid #e2e9f3;
+  border-radius: 6px;
 }
 
 .title {
-    text-align: center;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: 32px;
+  text-align: center;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
 
-    margin: 8px 0px;
+  margin: 8px 0px;
 }
 
 .register_wrapper {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .register_text {
-    margin-right: 4px;
+  margin-right: 4px;
 
-    font-size: 16px;
-    line-height: 160%;
+  font-size: 16px;
+  line-height: 160%;
 }
